--- a/README
+++ b/README
@@ -4,7 +4,7 @@ Use this software package at your own risk.  The programmer can not
 be held liable for any incurred damages due to the use of this software.
 
 You are encouraged to distribute this package freely.  This package is
-however not to be not sold (minor transfer costs excepted) or included in
+however not to be sold (minor transfer costs excepted) or included in
 any commercially sold software package (if you want to do this anyway,
 contact me (address below), and we'll work something out).
 
@@ -12,69 +12,69 @@ If you distribute it, please leave the package in tact.	 If you have some
 important changes that might be usefull to the rest of the world, contact
 me instead.
 
-----------------------
+-------------------------- SYSTEM REQUIREMENTS -------------------------------
 
-The Procmail mail processing package. (v1.30 1991-01-03)
+A ".forward" file (or equivalent) mechanism for forwarding mail, *grep or
+equivalent.
+
+The most important system calls that need to be supported (among others):
+fork(),read(),write(),dup(),wait(),pipe(),getpwent()
+
+For a more complete list of all library references see "includes.h"
+
+------------------------------ DESCRIPTION -----------------------------------
+
+The procmail mail processing program. (v2.02 1991/06/12)
 
 Can be used to create mail-servers, mailing lists, sort your incoming mail
-(real convenient when subscribing to one or more mailing lists),
-preprocess your mail, or selectively forward certain incoming mail
-automatically to someone.
+into separate folders/files (real convenient when subscribing to one or more
+mailing lists), preprocess your mail, or selectively forward certain incoming
+mail automatically to someone.
 
-To install it, edit config.h (!) and Makefile accordingly (if it doesn't
-compile at first, check if some extra header files (in includes.h) should
-be included (or left out) in order to make any used types/defines/declarations
-for the library compatible).
-
-BTW, the warnings you get about 'loop not entered at top': they're normal :-).
-Some older compilers could complain about ambiguous assignments, if they
-assume normal assigns, you're safe.
-
-If you run procmail by hand and pipe in some sample mail, then make
-sure that if you kill procmail, you use "kill pid" and NOT "kill -9 pid".
-Should procmail seem to hang, check if the $LOCKFILE is still present.
-If you kill procmail with "kill pid" it will clean up the $LOCKFILE
-itself.
-
-Though be sure to skim through config.h and in particular check out
-the t_buf declaration.
-
-Every user that wants to use procmail should have a .forward and a
-.procmailrc file in his HOME directory.	 For starters, you can look
-at the supplied example files in "examples".
-(BTW, be sure to make .forward *world* readable).
-
-For more info about the program, see the man page.
+For installation instructions see the INSTALL file.
 
 ----------------------
 
-Although I can't guarantee that the procmail (or lockfile) program
-will perform as required, I must say that I made the utmost effort
-to make procmail as robust as any program can be.
+Although I can't guarantee that the procmail program will perform as
+required, I must say that I made the utmost effort to make procmail as
+robust as any program can be (every conceivable system error is caught *and*
+handled).
 
-Procmail was designed to deliver the mail under the worst conditions
-(file system full, out of swap space, process table full,
+procmail was designed to deliver the mail under the worst conditions
+(file system full, out of swap space, process table full, file table full,
 missing support files, unavailable executables; it all doesn't matter).
 Should (in the unlikely event) procmail be unable to deliver your mail
 somewhere, the mail will bounce back to the sender.
 
+For a more extensive list of features see the FEATURES file.
+
 However, as with any program, bugs can not be completely ruled out.
 I tested the program extensively, and believe it should be relatively
-bug free (no known bug at the time).  Should, however, anyone
-find any bugs (highly unlikely :-), I would be pleased (well, sort of :-)
-to hear about it.  Please send me the patches or bug report.
+bug free (no known bug at the time).  Should, however, anyone find any
+bugs (highly unlikely :-), I would be pleased (well, sort of :-) to hear
+about it.  Please send me the patches or bug report.
 I'll look at them and will try to fix it in a future release.
 (BTW, if you should find any spelling or grammar errors in these files,
-it's not priority one, but if you were sending me mail anyway, I don't
-mind if you point them out to me; I like correct English just as much
-as you do).
+it's not priority one, but if you were sending me mail anyway, don't hesitate
+to point them out to me; I like correct English just as much as you do).
+
+Please note that this program essentially is supposed to be static, that
+means no extra features (honouring the *NIX spirit) are supposed to be
+added (though any usefull suggestions will be appreciated and evaluated if
+time permits).
 
 Cheers,
        Stephen R. van den Berg	at RWTH-Aachen, Germany.
 
-Internet E-mail:		berg@marvin.e17.physik.tu-muenchen.de
-or if the above bounces:	berg@cip-s01.informatik.rwth-aachen.de
+Internet E-mail:		berg@messua.informaik.rwth-aachen.de
+				berg@physik.tu-muenchen.de
 
 Or:	P.O.Box 21074
 	6369 ZG Simpelveld
 	The Netherlands
+
+----------------------
+
+P.S. I don't mind if you feed the program files through your favourite C
+     beautifier first, so any patches need not necessarily be from the
+     original sources; I apply these patches by hand anyway.
