--- a/README
+++ b/README
@@ -24,7 +24,7 @@ For a more complete list of all library references see "includes.h"
 
 ------------------------------ DESCRIPTION -----------------------------------
 
-The procmail mail processing program. (v2.02 1991/06/12)
+The procmail mail processing program. (v2.03 1991/06/20)
 
 Can be used to create mail-servers, mailing lists, sort your incoming mail
 into separate folders/files (real convenient when subscribing to one or more
@@ -73,6 +73,14 @@ Or:	P.O.Box 21074
 	6369 ZG Simpelveld
 	The Netherlands
 
+----------------------
+A recent version can be picked up at various comp.sources.misc archives.
+The latest version can be obtained directly from the ftp-archive at:
+
+	amaru.informatik.rwth-aachen.de (137.226.112.31)
+
+	as compressed tar file:		pub/unix/procmail.tar.Z
+	or in compressed shar format:	pub/unix/procmail.0?.Z
 ----------------------
 
 P.S. I don't mind if you feed the program files through your favourite C
